# Machine-Learning-Stuff

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DartConfiguration.tcl  General AI letsss gooooo.sln  LICENSE  README  README.md
.github/: FUNDING.yml
Cellular Automata/: CA.cpp  Cellular Automata.vcxproj  Cellular Automata.vcxproj.filters  main.cpp
Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  funny.cpp  helper.h  termcolor.hpp
Cpu/: CMakeLists.txt  Cpu.cpp  Cpu.h  Cpu.vcxproj  Cpu.vcxproj.filters  Cpu2.h  CpuTemplates.cpp  CpuThreading.cpp  CpuThreading.h  bruh.txt  cpp.hint  main.cpp  ppu.cpp
Cpu/include/: Cpu.h  Cpu2.h  CpuThreading.h
Cpu/src/: Cpu.cpp  CpuThreading.cpp  CpuThreadingTEMP.cpp  main.cpp  ppu.cpp
Cpu/tests/: test1.h
Cuda Test Stuff I Guess/: Cuda Test Stuff I Guess.vcxproj  kernel.cu
Evolutionary Assembly/: AssemblyCombinator.cpp  CMakeLists.txt  Evolutionary Assembly.vcxproj  Evolutionary Assembly.vcxproj.filters  Genetic.cpp  Genetic.h  evolution.txt  main.cpp
Evolutionary Assembly/include/: Genetic.h  Genetic2.h
Evolutionary Assembly/src/: Genetic.cpp  main.cpp
Evolutionary Assembly/tests/: test1.h
Machine Learning Stuff/: CudaSpikingNeuron.cpp  Machine Learning Stuff.vcxproj  Machine Learning Stuff.vcxproj.filters  Perceptron.cpp  SpikingNeurons.cu  SpikingNeurons.h  a.h  bruh.cpp  cpp.hint  epic.cu  epic.h  main.cpp
Simple-Web-Server/: CMakeLists.txt
Simple-Web-Server/tests/: CMakeLists.txt
TestStuff/: TestStuff.vcxproj  test.cpp  test.cu
